<resources>
    <string name="app_name">EE Estimator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="TimeUnit">Days</string>
    <string name="RoughtEstimates">All estimates are a rough estimation for more details estimation please contact our sales department</string>
    <string name="DescCoinbase">Image for coinbase</string>
    <string name="DescRevolut">Image for Revoulut</string>
    <string name="DescSnapchat">Image for Snapchat</string>
    <string name="DescScratch">Image for starting from scratch</string>
    <string name="DescLogo">Image of company logo</string>
    <string name="DescPowered">Image powered by company</string>
    <string name="disclaimer">Please note, all cost estimates are intended to be indicative of development costs and timescales only and are exclusive of all hosting costs, paid services or purchased assets of any kind. All prices are in £ and inclusive of sales tax.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="buttonText">Calculate</string>
    <string name="buttonSendText">Send</string>
    <string name="button_background">Button orange background</string>
    <string name="total">Total Days</string>
    <string name="poweredBy">Powered By Equaleyes Ltd.</string>
    <string name="totCost">Total cost</string>
    <string name="hourlyRate">Houlry rate of dev. day is</string>
    <string name="PDFEmail">Get the estimation on your email in a PDF format.</string>
    <string name="textEditEmail">Email address</string>
    <string name="subscribeText">I would like to subscribe to updates and proposals from equaleyes Ltd.</string>
    <string name="currency">£</string>
</resources>
