<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ActivitySummary">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totCost"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="€€€"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/HourlyRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourlyRate"
            android:textSize="12sp"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/tvTotalCost"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/tvEmailPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="46dp"
            android:text="@string/PDFEmail"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_goneMarginRight="16dp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textEditEmail"
            android:inputType="textEmailAddress"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@id/cbSubscribe"/>

        <CheckBox
            android:id="@+id/cbSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonView"/>

        <TextView
            android:id="@+id/tvSubscribe"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/subscribeText"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonView"/>

        <com.fynov.equaleyes.appestimator.ui.views.ButtonView
            android:id="@+id/buttonView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</layout>
